# campaign-1.0

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  Makefile_old  README  README.md  acinclude.m4  campaign.h  campaign.pc.in  campaignEnv.sh  config.h  config.h.in  config.sh  config.status  configure  configure.ac  libcampaign-chebyshev-1.0.la  libcampaign-euclidean-1.0.la  libcampaign-euclideansquared-1.0.la  libcampaign-manhattan-1.0.la  libtool
.libs/: libcampaign-chebyshev-1.0.la  libcampaign-chebyshev-1.0.lai  libcampaign-chebyshev-1.0.so.0  libcampaign-chebyshev-1.0.so.0.0.0  libcampaign-euclidean-1.0.la  libcampaign-euclidean-1.0.lai  libcampaign-euclidean-1.0.so.0.0.0  libcampaign-euclideansquared-1.0.la  libcampaign-euclideansquared-1.0.so.0.0.0  libcampaign-manhattan-1.0.la  libcampaign-manhattan-1.0.lai  libcampaign-manhattan-1.0.so.0  libcampaign-manhattan-1.0.so.0.0.0
campaign/: Generator.cpp  Generator.h  dataio.cpp  dataio.h  defaults.cpp  defaults.h  gpudevices.cpp  hierarchicalCPU.cpp  hierarchicalCPU.h  hierarchicalGPU.chebyshev.cu.cpp  hierarchicalGPU.cu  hierarchicalGPU.euclidean.cu.cpp  hierarchicalGPU.euclideansquared.cu.cpp  hierarchicalGPU.manhattan.cu.cpp  kcentersCPU.cpp  kcentersGPU.cu  kcentersGPU.euclidean.cu.cpp  kcentersGPU.euclideansquared.cu.cpp  kcentersGPU_old.cu  kmeansCPU.cpp  kmeansCPU.h  kmeansGPU.cu  kmeansGPU.euclidean.cu.cpp  kmeansGPU.euclideansquared.cu.cpp  kmeansGPU.h  kmedoidsCPU.cpp  kmedoidsGPU.cu  kmedoidsGPU.euclidean.cu.cpp  kmedoidsGPU.euclideansquared.cu.cpp  kmedoidsGPU.h  kpsmeansGPU.cu  kpsmeansGPU.euclidean.cu.cpp  kpsmeansGPU.euclideansquared.cu.cpp  kpsmeansGPU.h  libcampaign_chebyshev_1.0_la-dataio.lo  libcampaign_chebyshev_1.0_la-defaults.lo  libcampaign_chebyshev_1.0_la-gpudevices.lo  libcampaign_chebyshev_1.0_la-hierarchicalCPU.lo  libcampaign_chebyshev_1.0_la-hierarchicalGPU.chebyshev.cu.lo  libcampaign_chebyshev_1.0_la-kcentersCPU.lo  (+71 more)
campaign/.deps/: libcampaign_chebyshev_1.0_la-dataio.Plo  libcampaign_chebyshev_1.0_la-defaults.Plo  libcampaign_chebyshev_1.0_la-gpudevices.Plo  libcampaign_chebyshev_1.0_la-hierarchicalCPU.Plo  libcampaign_chebyshev_1.0_la-hierarchicalGPU.chebyshev.cu.Plo  libcampaign_chebyshev_1.0_la-kcentersCPU.Plo  libcampaign_chebyshev_1.0_la-kmeansCPU.Plo  libcampaign_chebyshev_1.0_la-kmedoidsCPU.Plo  libcampaign_chebyshev_1.0_la-somCPU.Plo  libcampaign_chebyshev_1.0_la-timing.Plo  libcampaign_chebyshev_1.0_la-tokens.Plo  libcampaign_euclidean_1.0_la-dataio.Plo  libcampaign_euclidean_1.0_la-defaults.Plo  libcampaign_euclidean_1.0_la-gpudevices.Plo  libcampaign_euclidean_1.0_la-hierarchicalCPU.Plo  libcampaign_euclidean_1.0_la-hierarchicalGPU.euclidean.cu.Plo  libcampaign_euclidean_1.0_la-kcentersCPU.Plo  libcampaign_euclidean_1.0_la-kcentersGPU.euclidean.cu.Plo  libcampaign_euclidean_1.0_la-kmeansCPU.Plo  libcampaign_euclidean_1.0_la-kmeansGPU.euclidean.cu.Plo  libcampaign_euclidean_1.0_la-kmedoidsCPU.Plo  libcampaign_euclidean_1.0_la-kmedoidsGPU.euclidean.cu.Plo  libcampaign_euclidean_1.0_la-kpsmeansGPU.euclidean.cu.Plo  libcampaign_euclidean_1.0_la-min.euclidean.cu.Plo  libcampaign_euclidean_1.0_la-rmsdGPU.euclidean.cu.Plo  libcampaign_euclidean_1.0_la-somCPU.Plo  libcampaign_euclidean_1.0_la-somGPU.euclidean.cu.Plo  libcampaign_euclidean_1.0_la-timing.Plo  libcampaign_euclidean_1.0_la-tokens.Plo  libcampaign_euclideansquared_1.0_la-Generator.Plo  libcampaign_euclideansquared_1.0_la-dataio.Plo  libcampaign_euclideansquared_1.0_la-defaults.Plo  libcampaign_euclideansquared_1.0_la-gpudevices.Plo  libcampaign_euclideansquared_1.0_la-hierarchicalCPU.Plo  libcampaign_euclideansquared_1.0_la-hierarchicalGPU.euclideansquared.cu.Plo  libcampaign_euclideansquared_1.0_la-kcentersCPU.Plo  libcampaign_euclideansquared_1.0_la-kcentersGPU.euclideansquared.cu.Plo  libcampaign_euclideansquared_1.0_la-kmeansCPU.Plo  libcampaign_euclideansquared_1.0_la-kmeansGPU.euclideansquared.cu.Plo  libcampaign_euclideansquared_1.0_la-kmedoidsCPU.Plo  (+19 more)
examples/: Makefile  Makefile.am  Makefile.in  README  alloro  data-set  data-set-XY-contiguous  data-set-XY-intercalate  data_set_prova  hierarchicalCPU  hierarchicalCPU.cc  hierarchicalGPU  hierarchicalGPU.cc  inputProva.txt  kcentersCPU  kcentersCPU.cc  kcentersGPU  kcentersGPU.cc  kcentersGPU_outWithXYcontiguous.txt  kcentersGPU_outWithXYintercalate.txt  kmeansCPU  kmeansCPU.cc  kmeansGPU  kmeansGPU.cc  kmedoidsCPU  kmedoidsCPU.cc  kmedoidsGPU  kmedoidsGPU.cc  kpsmeansGPU  kpsmeansGPU.cc  prova  rmsdGPU  rmsdGPU.cc  somCPU  somCPU.cc  somGPU  somGPU.cc
examples/.deps/: hierarchicalCPU-hierarchicalCPU.Po  hierarchicalGPU-hierarchicalGPU.Po  kcentersCPU-kcentersCPU.Po  kcentersGPU-kcentersGPU.Po  kmeansCPU-kmeansCPU.Po  kmeansGPU-kmeansGPU.Po  kmedoidsCPU-kmedoidsCPU.Po  kmedoidsGPU-kmedoidsGPU.Po  kpsmeansGPU-kpsmeansGPU.Po  rmsdGPU-rmsdGPU.Po  somCPU-somCPU.Po  somGPU-somGPU.Po
examples/.svn/: all-wcprops  entries
examples/.svn/text-base/: README.svn-base
examples/kcentersGPU_times/: timeShared0Intercalated0.txt  timeShared0Intercalated1.txt  timeShared1Intercalated0.txt  timeShared1Intercalated1.txt
generate/: Generator.cpp  Generator.h  generateSetOfPoints  generateSetOfPoints_old.cc  main.cpp  output.txt  output1.txt  output2.txt  outputProva.txt
install/include/campaign-1.0/: campaign.h
install/include/campaign-1.0/campaign/: Generator.h  dataio.h  gpudevices.h  hierarchicalGPU.h  kcentersCPU.h  kcentersGPU.h  kmeansGPU.h  kmedoidsCPU.h  metricsGPU.h  rmsdGPU.h  somCPU.h  timing.h
install/lib/: libcampaign-chebyshev-1.0.so.0.0.0  libcampaign-euclidean-1.0.so.0  libcampaign-euclidean-1.0.so.0.0.0  libcampaign-euclideansquared-1.0.la  libcampaign-euclideansquared-1.0.so.0  libcampaign-euclideansquared-1.0.so.0.0.0  libcampaign-manhattan-1.0.so.0.0.0
install/lib/pkgconfig/: campaign-1.0.pc
